FINALLY FIXED DARK MODE YIPEE!

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -4,7 +4,6 @@
 
 @layer base {
   body {
-    @apply dark:text-white;
-    @apply dark:bg-navy-800;
+    @apply dark:text-white dark:bg-navy-800;
   }
 }
